<resources>
    <string name="app_name">MudioApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="registration_registerBy">Cadastrar pelo</string>
    <string name="registration_getInTouchWithTheGym">Entre em contato</string>
    <string name="editTextHint">Email - Matrícula - Nome</string>
    <string name="editTextSenha">Entre com a senha</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="series">Series:</string>
    <string name="repeticoes">Repetições:</string>
    <string name="objetivo">Objetivo:</string>
    <string name="title_activity_main_menu2">MainMenu2</string>
    <string name="navigation_drawer_open">Gym up and running!</string>
    <string name="navigation_drawer_close">Gym is still up and running</string>
</resources>
