<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/gym_background"
    tools:context=".MainActivity">

    <ImageView android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/gym_icon"
        android:adjustViewBounds="true"
        android:layout_marginBottom="25dp"
        />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        style="@style/marginLeftAndRight"
        android:background="@drawable/something_rounded"
        android:padding="20dp"
        >

        <TableRow
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_marginRight="5dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="#ffffff"
                android:text="Log in:"/>
            <AutoCompleteTextView
                android:hint="@string/editTextHint"
                android:background="@android:drawable/editbox_background_normal"/>
        </TableRow>

        <TableRow>
            <TextView
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="#ffffff"
                android:text="Senha:"/>
            <AutoCompleteTextView
                android:hint="@string/editTextSenha"
                android:background="@android:drawable/editbox_background_normal" />
        </TableRow>

    </TableLayout>
    <LinearLayout
        android:layout_margin="15dp"
        android:orientation="horizontal"
        android:gravity="right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Manter-me conectado"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textColorHighlight="#30a9f4"
            />

    <Button
        android:id="@+id/getIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ENTRAR"
        style="@style/marginLeftAndRight"
        android:background="@drawable/rounded_btn_cool"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:padding="13dp"
        android:elevation="2dp"
        />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_marginBottom="5dp"
            android:gravity="center">
            <ImageView
                android:layout_marginRight="8dp"
                android:src="@drawable/_face"/>
            <TextView
                android:textSize="20sp"
                android:textColor="#0033CC"
                android:text="@string/registration_registerBy"/>
            <TextView
                android:textSize="20sp"
                android:textColor="#0033CC"
                android:text=" FaceBook" android:textStyle="bold"/>
        </TableRow>

        <TableRow
            android:layout_marginBottom="8dp"
            android:gravity="center">
            <ImageView
                android:layout_marginRight="5dp"
                android:src="@drawable/_google"/>
            <TextView
                android:textSize="20sp"
                android:textColor="#FF0000"
                android:text="@string/registration_registerBy"/>
            <TextView
                android:textSize="20sp"
                android:textColor="#FF0000"
                android:text=" Google+" android:textStyle="bold"/>
        </TableRow>

    </TableLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/registration_getInTouchWithTheGym"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textColor="#ffffff"
        android:textStyle="bold|italic"
        />
</LinearLayout>
